--- a/html/wp-content/languages/fr_CA.po
+++ b/html/wp-content/languages/fr_CA.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the WordPress - 6.0.x package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2022-07-13 18:56:33+0000\n"
+"PO-Revision-Date: 2022-11-06 16:01:45+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -10,6 +10,10 @@ msgstr ""
 "X-Generator: GlotPress/4.0.0-alpha.3\n"
 "Language: fr_CA\n"
 "Project-Id-Version: WordPress - 6.0.x\n"
+
+#: wp-includes/rest-api/endpoints/class-wp-rest-terms-controller.php:215
+msgid "Sorry, you are not allowed to view terms for this post."
+msgstr "Désolé, vous n’avez pas l’autorisation de voir les termes de cette publication."
 
 #: wp-includes/theme.json
 msgctxt "Duotone name"
